public/apps/configuration/configuration.less
@import "~ui/styles/variables/colors.less";
@import "~ui/styles/variables/bootstrap-mods.less";

h1 {
 font-size: 1.6em;
  font-weight: 600;
}

h2 {
  font-size: 1.5em;
  font-weight: 600;
}

h3 {
  font-size: 1.3em;
  font-weight: 600;
}

h5 {
  font-size: 1.1em;
  font-weight: 600;
  margin-bottom: 5px;
  margin-top: 15px;
}

.help {
  cursor: help;
}

.error-message a {
  color: red;
}

.ng-submitted input.ng-invalid {
  border-color: #A30000 !important;
}

.kuiTextInput:invalid {
  border-color: #DEDEDE;
}

.kuiBadge {
  margin-left: 0px;
}

.topBottomMargin {
  margin-bottom:20px;
  margin-top:20px;
}

.editResourceForm {
  width: 70%;
}

.brand-image {
  max-width: 300px;
  text-align: center;
}

.actions {
  text-align: right;
  vertical-align: middle;
}

.selected {
  background-color: #eee;
}

.indexheading {
  margin-top: 0px;
}

.resourcename {
  margin-bottom: 10px;
  margin-top: 0px;
}

.noresourcename {
  font-style: italic;
  color:#aaa;
  font-size: 16px;
}

.labelhint {
  font-style: italic;
  color:#aaa;
  font-weight: normal;
}
.marginbottom--small {
  margin-bottom: 10px;
}

.tab-inactive {
  color: #ccc;
}

.licensehint {
  color: #555;
  font-weight: 400;
}

.license-error {
  font-weight: bold;
  font-size: large;
  margin-bottom: 20px;
}

.headerHeadline {
  padding-left: 10px;
  font-size: 14px;
  font-weight: bold;
}

.kuiPanel--noborder {
  border: none;
}

.kuiEmptyTablePrompt--nopadding {
  padding: 0px;
}

.kuiGalleryButton {
  width: 130px;
  height: 130px;
  padding: 0px;
}

.kuiGalleryButton__label {
  font-size: 14px;
  color: #191E23;
  text-align: center;
  max-width: 100%;
  white-space: inherit;
  overflow: hidden;
  text-overflow: ellipsis;
}

.kuiTableRowCell {
  padding: 7px 8px 8px;
}

.tableHeaderCellIndexGroups {
  width:70%;
  color:#000;
  font-weight:bold;
}

.tableHeaderBold {
  color:#000;
  font-weight:bold;
}

.tableIndexGroups {
 margin-bottom: 20px;
}

.cellAlignTop {
  vertical-align: top;
}

.twowidth {
  width:20%;
}


.fourwidth {
  width:40%;
}

.fivewidth {
  width:50%;
}
.sevenwidth {
     width:70%;
}

.fullwidth {
  width:100%;
}

.formsubmit {
  margin-bottom: 30px;
  margin-top: 10px;
}

.kuiLocalNav {
  min-height: 60px;
  margin-bottom: 20px;
}

.error-message {
  font-weight: bold;
  color: red;
  margin-bottom: 20px;
}

.btn-default {
  background-color: #73b626;
  border-bottom-color: #73b626;
  border-left-color: #73b626;
  border-right-color: #73b626;
  border-top-color: #73b626;
  color: #ffffff;
}

.btn-default:hover {
  background-color: #5e9b24;
  border-bottom-color: #5e9b24;
  border-left-color: #5e9b24;
  border-right-color: #5e9b24;
  border-top-color: #5e9b24;
  color: #ffffff;
}

.form-control {
  outline: 0;
  border-color: #ECECEC;
  border-style: solid;
  border-width: 1px;
  width: 100%;
  background-color: #ffffff;
  padding: 6px;
  border-radius: 2px;
  margin-bottom: 5px;
  font-size: 14px;
}

.ace_editor {
  min-height: 300px;
  border: 1px solid #f0f0f0;
}

.authc-disabled {
  color: #ccc;
}

/**
 * Angular UI-Select
 */
// Since we have Bootstrap classes through the component,
// we need to remove some styles
.ui-select-container {
  .ui-select-toggle.form-control {
    padding-bottom: 0;
    margin-bottom: 0;
  }
}
// Helps mimic the other fields that we're using
.ui-select-search,
.ui-select-toggle {
  padding-left: 12px;
  border-radius: 4px;
}

// Neutralize default styles
.ui-select-match .btn:hover {
  background-color: #fff;
  color: #2D2D2D;
  border: 1px solid #D9D9D9;
}

